--- a/RankingVideojuegos/RankingVideojuegos/appsettings.json
+++ b/RankingVideojuegos/RankingVideojuegos/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-RankingVideojuegos-babfa18c-04d4-46c9-b686-95fd10b9f6e0;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=LENOVO-LEGION-Y\\SQLEXPRESS;Initial Catalog=RankingVideojuegosDB;Integrated Security=True;Encrypt=False"
   },
   "AWS": {
     "BucketName": "ongapp-imagenes-2025",
