--- a/RankingVideojuegos/RankingVideojuegos/appsettings.json
+++ b/RankingVideojuegos/RankingVideojuegos/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=LENOVO-LEGION-Y\\SQLEXPRESS;Initial Catalog=RankingVideojuegosDB;Integrated Security=True;Encrypt=False"
+    "DefaultConnection": "Data Source=PORTATIL-NICK-L\\SQLEXPRESS;Initial Catalog=RankingVideojuegosDB;Integrated Security=True;Encrypt=False"
   },
   "AWS": {
     "BucketName": "ongapp-imagenes-2025",
