--- a/RankingVideojuegos/RankingVideojuegos/appsettings.json
+++ b/RankingVideojuegos/RankingVideojuegos/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=PORTATIL-NICK-L\\SQLEXPRESS;Initial Catalog=RankingVideojuegosDB;Integrated Security=True;Encrypt=False"
+    //"DefaultConnection": "Data Source=PORTATIL-NICK-L\\SQLEXPRESS;Initial Catalog=RankingVideojuegosDB;Integrated Security=True;Encrypt=False"
+    "DefaultConnection": "Server=database-1.csx48yo4sfyh.us-east-1.rds.amazonaws.com;Database=RankingVideojuegosDB;User ID=admin;Password=Password123!;Encrypt=False"
   },
   "AWS": {
     "BucketName": "ongapp-imagenes-2025",
