--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
   build:
     commands:
       - echo "Restaurando dependencias..."
-      - dotnet restore
+      - "dotnet restore"
       - echo "Publicando la aplicación en modo Release..."
       - "dotnet publish -c Release -o ./publish"
 artifacts:
